fixes images alignment.

--- a/themes/hugo-serif-theme/assets/scss/components/_feature.scss
+++ b/themes/hugo-serif-theme/assets/scss/components/_feature.scss
@@ -12,7 +12,7 @@
     flex: 0 0 auto;
     // width: 80px;
     // height: 80px;
-    display: flex;
+    // display: flex;
     margin-bottom: 20px;
     text-align: center;
   }
